[package]
name = "dev-simulator-3000"
version = "0.1.0"
authors = ["Stefano Chiodino <stefano.chiodino@infinityworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = ["pancurses-backend"]