[package]
name = "dev-simulator-3000"
version = "0.1.0"
authors = ["Stefano Chiodino <stefano.chiodino@infinityworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }
bitflags = "1.0"
cassowary = "0.3"
unicode-segmentation = "1.2"
unicode-width = "0.1"
termion = { version = "1.5", optional = true }
rustbox = { version = "0.11", optional = true }
easycurses = { version = "0.12.2", optional = true }
pancurses = { version = "0.16.1", optional = true, features = ["win32a"] }
serde = { version = "1", "optional" = true, features = ["derive"]}

rand = "0.7"
argh = "0.1"

chrono = "0.4"

[dev-dependencies]
